--- a/Css/beta.css
+++ b/Css/beta.css
@@ -52,6 +52,9 @@
     .conFooter {
         margin-left: 3% !important;
     }
+    .divBenefits {
+        padding-bottom: 70px !important;;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
