--- a/Css/beta.css
+++ b/Css/beta.css
@@ -103,6 +103,11 @@
     .divStep {
         display: block !important;
     }
+    .btnlogin {
+        border: 0px !important;
+        padding: 0px !important;
+        text-align: left !important;
+    }
 }
 
 
