--- a/Css/beta.css
+++ b/Css/beta.css
@@ -873,3 +873,31 @@ select::-ms-expand {
     z-index: -1;
     left: 50%;
 }
+
+.owl-next, .owl-prev {
+    font-family: Roboto;
+    color: #212121 !important;
+    font-weight: 700 !important;
+    font-size: 2.2rem !important; 
+}
+
+.owl-prev {
+    margin-right: 10px !important;
+}
+
+.owl-nav {
+    display: none !important;
+}
+
+.owl-theme .owl-controls .owl-page {
+    display: inline-block;
+}
+.owl-theme .owl-controls .owl-page span {
+    background: none repeat scroll 0 0 #869791;
+    border-radius: 20px;
+    display: block;
+    height: 12px;
+    margin: 5px 7px;
+    opacity: 0.5;
+    width: 12px;
+}
