--- a/Css/location1.css
+++ b/Css/location1.css
@@ -5,20 +5,63 @@ body, html {
 }
 
 @media only screen and (max-width: 575px) {
-    #mapid {
-        position: static;
-        width: 100%;
+    .colmap {
         height: 350px !important;
-        margin-top: 50px !important;
+        display: none !important;
+    }
+    .txtsearch {
+        display: none !important;
     }
     .collocation {
-        margin-top: 200px !important;
+        padding: 0px !important;
+    }
+    .rowLocation {
+        padding: 0px !important;
+        margin-top: 65px !important;
+    }
+    tr:hover * {
+        background-color: none !important;
+    }
+    .map {
+        display: block !important;
+        margin-bottom: 15px !important;
+    } 
+}
+@media only screen and (max-width: 565px) {
+    .loc1 {
+        margin-top: 0px !important;
+        margin-left: 10px !important;
+    }
+    .img1 {
+        margin-top: -18px !important;
+    }
+}
+@media only screen and (max-width: 399px) {
+    .loc1 {
+        margin-left: 27px !important;
+        margin-top: -20px !important;
+    }
+    .img1 {
+        margin-top: 0px !important;
     }
 }
 
 #mapid {
     width: 100%;
     height: 100%;
+}
+
+
+
+.table {
+    background-color: white;
+    padding: 0px;
+}
+
+.collocation {
+    -webkit-box-shadow: inset 0px 0px 10px 0px rgba(33, 33, 33, 0.28);
+    -moz-box-shadow: inset 0px 0px 10px 0px rgba(33, 33, 33, 0.28);
+    box-shadow: inset 0px 0px 10px 0px rgba(33, 33, 33, 0.28);
 }
 
 .btnservices:hover, .btnpackages:hover, .btnfinddoctor:hover, .btnclinic:hover {
@@ -61,26 +104,28 @@ body, html {
 }
 
 .lbllocation {
-    font-family: muli semibold;
-    font-size: 15px;
+    font-family: Roboto;
+    font-size: 1.1rem   ;
     color: #212121;
-    margin-left: 5px;
+    margin-left: 12px;
+    font-weight: 500;
 }
 
 .pLocation2 {
-    font-family: muli;
+    font-family: Roboto;
     font-size: 14px;
+    font-weight: 500;
     color: #424242;
-    margin-left: 18px;
-    margin-top: 5px;
+    margin-left: 27px;
+    margin-top: -20px;
 }
 
 .pContactNumber {
-    font-family: muli;
+    font-family: Roboto;
     font-size: 14px;
+    font-weight: 500;
     color: #424242;
-    margin-left: 18px;
-    margin-top: -10px;
+    margin-left: 10px;
 }
 
 tr {
@@ -88,13 +133,16 @@ tr {
     transition: all 0.2s;
 }
 
-tr:hover * {
-    background-color: #00C853;
-    color: white;
-}
-
 #myTable {
     border-collapse: collapse;
     /* Collapse borders */
     width: 100%;
+}
+
+.leaflet-control-zoom {
+    visibility: hidden;
+}
+
+.leaflet-control-attribution {
+    visibility: hidden;
 }
