--- a/Css/location1.css
+++ b/Css/location1.css
@@ -25,8 +25,9 @@ body, html {
     .map {
         display: block !important;
         margin-bottom: 15px !important;
-    } 
+    }
 }
+
 @media only screen and (max-width: 565px) {
     .loc1 {
         margin-top: 0px !important;
@@ -36,6 +37,7 @@ body, html {
         margin-top: -18px !important;
     }
 }
+
 @media only screen and (max-width: 399px) {
     .loc1 {
         margin-left: 27px !important;
@@ -50,8 +52,6 @@ body, html {
     width: 100%;
     height: 100%;
 }
-
-
 
 .table {
     background-color: white;
@@ -105,7 +105,7 @@ body, html {
 
 .lbllocation {
     font-family: Roboto;
-    font-size: 1.1rem   ;
+    font-size: 1.1rem;
     color: #212121;
     margin-left: 12px;
     font-weight: 500;
@@ -145,4 +145,90 @@ tr {
 
 .leaflet-control-attribution {
     visibility: hidden;
+}
+
+.carousel-item:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+}
+
+.divLocation2 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 9999999999;
+    background-color: white;
+    border-top: 1px solid lightgray;
+}
+
+.carousel-indicators li {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+}
+
+.pCardLocation {
+    font-family: Manrope;
+    color: #212121;
+    font-weight: 500;
+    font-size: 1.3rem;
+}
+
+.pBox {
+    font-family: Manrope;
+    font-size: 0.9rem;
+    background-color: #F5F5F5;
+    padding: 5px 8px;
+    border-radius: 5px;
+    color: #00C853;
+    width: max-content;
+    margin-right: 5px;
+}
+
+.pCardExactLocation {
+    font-family: Manrope;
+    color: #212121;
+    font-size: 0.9rem;
+    font-weight: 400;
+}
+
+.divCarousel {
+    height: 180px;
+}
+
+.btnBack2 {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    border-radius: 50%;
+    background-color: white;
+    border: 0px;
+    color: black;
+    font-family: Roboto;
+    font-weight: 500;
+    z-index: 99999999999999999999999999999;
+    height: 40px;
+    width: 40px;
+    -ms-transform: rotate(180deg);
+    /* IE 9 */
+    transform: rotate(180deg);
+    cursor: pointer;
+    transition:  all 0.1s;
+}
+
+.btnBack2:hover {
+    background-color: #00C853;
+    color: white;
+}
+
+.map {
+    
 }
