--- a/Css/store.css
+++ b/Css/store.css
@@ -153,16 +153,24 @@ body, html {
 .pOur {
     font-family: Manrope;
     color: #08172c;
-    font-size: 2rem;
-    font-weight: 600;
+    font-size: 1.8rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+hr {
+    background-color: #00C853;
+    height: 2px;
+    width: 55px;
+    margin: 0 auto;
 }
 
 .card {
     border: 0px;
+    margin-top: 10px;
 }
 
 .card-img-top, .card-body {
-    border: 0px !important;
     padding-left: 0px;
 }
 
@@ -263,4 +271,252 @@ body, html {
     font-size: 18px;
     margin-left: 45px;
     margin-top: -10px !important;
+}
+
+.pNumberTab {
+    font-family: Manrope;
+    color: #757575;
+    font-size: 1.1rem;
+    font-size: 600;
+    transition: all 0.2;
+}
+
+.pDay {
+    font-family: Manrope;
+    color: #08172c;
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-top: -10px;
+    margin-bottom: 0px;
+    transition: all 0.2s;
+}
+
+.colDate {
+    cursor: pointer;
+    transition: all 0.2s;
+    padding: 15px;
+    width: 100%;
+}
+
+.colDate:hover {
+    background-color: #00C853;
+}
+
+.colDate:hover p {
+    transition: all 0.2s;
+    color: white;
+}
+
+:root {
+    --color-one: #34D1D1;
+    --color-two: #2F2235;
+    --color-three: #3F3244;
+    --color-four: #F2F2F2;
+    --color-five: #D1D2D3;
+    --color-six: #666666;
+    --color-seven: #000000;
+    --color-eight: #ffffff;
+}
+
+html {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.accordion {
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    width: 100%;
+}
+
+.accordion__content {
+    order: 1;
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.accordion__label {
+    font-family: Manrope;
+    font-size: 1.1rem;
+    font-weight: 500;
+    display: block;
+    cursor: pointer;
+    flex-grow: 1;
+    text-align: center;
+    padding: 1% 5% 1% 5%;
+    margin-right: 1px;
+}
+
+.accordion__radio {
+    display: none;
+}
+
+.accordion input[type="radio"] {
+    display: none;
+}
+
+.accordion input[type="radio"]+label {
+    color: var(--color-six);
+    z-index: 1;
+}
+
+.accordion input[type="radio"]:checked+label {
+    transition: all 0.1s;
+    color: #00C853;
+    background-color: white;
+    font-weight: 600;
+    border-bottom: 2px solid #00C853;
+}
+
+.accordion input[type="radio"]:checked+label+.accordion__content {
+    display: flex;
+    margin-right: 0;
+}
+
+@media (max-width: 900px) {
+    .accordion {
+        border: 1px solid var(--color-five);
+    }
+    .accordion-tab--status {
+        display: inline;
+    }
+    .accordion__content, .accordion__label {
+        order: initial;
+    }
+    .accordion__content {
+        flex-direction: column;
+    }
+    .accordion__label {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 1px;
+        display: flex;
+        justify-content: space-between;
+        font-size: 1.2em;
+        padding: 5% 6% 5% 6%;
+    }
+    .accordion__label:last-child {
+        background-color: magenta;
+    }
+    .accordion__content__image__container {
+        width: 100%;
+    }
+    .accordion__content__image {
+        padding: 0;
+        margin: 0;
+        object-fit: cover;
+        height: 300px;
+        width: 100%;
+    }
+    .accordion__content__text {
+        font-size: 0.9em;
+        margin: 4% 5% 4% 5%;
+    }
+    .accordion__content__text__title {
+        margin: 2% 0 2% 0;
+    }
+    .accordion__content__text__horizontal-line {
+        width: 100%;
+    }
+    .accordion input[type="radio"]+label span:after {
+        content: '+';
+    }
+    .accordion input[type="radio"]:checked+label span:after {
+        content: '—';
+    }
+    .accordion input[type="radio"]:checked+label {
+        border: none;
+    }
+    .accordion input[type="radio"]:checked+label+.accordion {
+        border: none;
+    }
+    .accordion input[type="radio"]:checked+label+.accordion__content {
+        border: none;
+    }
+}
+
+.pDoctor {
+    font-family: Manrope;
+    color: #08172c;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.pTimeDoctor {
+    font-family: Manrope;
+    color: #08172c;
+    font-weight: 500;
+    font-size: 0.9rem;
+    margin-top: -14px;
+    margin-bottom: 0px;
+}
+
+.box {
+    background-color: #f6f7fb;
+    padding: 20px;
+    border-left: 2px solid #00C853;
+}
+
+.draw-border {
+    font-family: Manrope;
+    font-weight: 500;
+    padding: 10px;
+    width: 200px;
+    box-shadow: inset 0 0 0 2px #08172c;
+    color: #08172c;
+    -webkit-transition: color 0.25s 0.0833333333s;
+    transition: color 0.25s 0.0833333333s;
+    position: relative;
+}
+
+.draw-border::before, .draw-border::after {
+    border: 0 solid transparent;
+    box-sizing: border-box;
+    content: '';
+    pointer-events: none;
+    position: absolute;
+    width: 0;
+    height: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.draw-border::before {
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+}
+
+.draw-border::after {
+    border-top-width: 2px;
+    border-right-width: 2px;
+}
+
+.draw-border:hover {
+    color: #00C853;
+}
+
+.draw-border:hover::before, .draw-border:hover::after {
+    border-color: #00C853;
+    -webkit-transition: border-color 0s, width 0.1s, height 0.1s;
+    transition: border-color 0s, width 0.1s, height 0.1s;
+    width: 100%;
+    height: 100%;
+}
+
+.draw-border:hover::before {
+    -webkit-transition-delay: 0s, 0s, 0.25s;
+    transition-delay: 0s, 0s, 0.25s;
+}
+
+.draw-border:hover::after {
+    -webkit-transition-delay: 0s, 0.25s, 0s;
+    transition-delay: 0s, 0.25s, 0s;
+}
+
+.btn {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
