--- a/Css/clinic.css
+++ b/Css/clinic.css
@@ -7,6 +7,44 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    .conheader {
+        display: none !important;
+    }
+    .pWe {
+        font-size: 1.4rem !important;
+    }
+    .pOur {
+        font-size: 1.2rem !important;
+    }
+    .pSub {
+        width: 100% !important;
+        font-size: 0.9rem !important;
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .consubscribe {
+        margin-top: 30px;
+        display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        clear: both;
+        text-align: center !important;
+        float: none !important;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .psubscribe {
+        text-align: center !important;
+    }
+    .btnsubscribe {
+        width: auto !important;
+        margin-top: 10px !important;
+    }
+}
+
 body, html {
     width: 100%;
     height: auto;
@@ -393,7 +431,8 @@ button:hover .button-text {
     font-family: Manrope;
     color: gray;
     font-size: 1rem;
-    font-weight: 400\;;
+    font-weight: 400\;
+    ;
 }
 
 .boxServices {
@@ -423,4 +462,18 @@ button:hover .button-text {
     font-size: 0.9rem;
     font-weight: 400;
     margin-top: 10px;
+}
+
+.leaflet-control-zoom {
+    visibility: hidden;
+}
+
+.leaflet-control-attribution {
+    visibility: hidden;
+}
+
+.card-deck {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: .5rem;
 }
