--- a/Css/clinic.css
+++ b/Css/clinic.css
@@ -476,7 +476,33 @@ button:hover .button-text {
 }
 
 .card-deck {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: .5rem;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap;
+    align-items: stretch;
+}
+
+.card-deck .card {
+    display: block;
+    flex-basis: 23%;
+    /* change this value for each breakpoint*/
+}
+
+.inner {
+    overflow: hidden;
+}
+
+.inner img {
+    transition: all 0.2s ease;
+}
+
+.inner:hover {
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,200,83, 0.20);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0,200,83, 0.20);
+    box-shadow: 0px 0px 14px 0px rgba(0,200,83, 0.20);
+}
+
+.inner:hover img {
+    filter: brightness(70%);
+    transform: scale(1.5);
 }
