--- a/Css/clinic.css
+++ b/Css/clinic.css
@@ -506,3 +506,9 @@ button:hover .button-text {
     filter: brightness(70%);
     transform: scale(1.5);
 }
+
+.card-deck {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: .5rem;
+}
