--- a/Css/info.css
+++ b/Css/info.css
@@ -288,3 +288,105 @@ body {
 .image-upload>input {
     display: none;
   }
+
+
+  .cbx {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    padding: 6px 8px;
+    border-radius: 6px;
+    overflow: hidden;
+    transition: all 0.2s ease;
+    width: auto;
+    display: inline-block;
+    text-align: left;
+  }
+  .cbx:not(:last-child) {
+    margin-right: 6px;
+  }
+  .cbx:hover {
+    background: rgba(0,119,255,0.06);
+  }
+  .cbx span {
+    float: left;
+    transform: translate3d(0, 0, 0);
+    font-family: muli, sans-serif;
+    font-weight: 500;
+    padding-left: 15px;
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  .cbx span:first-child {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    border-radius: 4px;
+    transform: scale(1);
+    border: 1px solid #cccfdb;
+    transition: all 0.2s ease;
+    box-shadow: 0 1px 1px rgba(0,16,75,0.05);
+  }
+  .cbx span:first-child svg {
+    position: absolute;
+    top: 3px;
+    left: 2px;
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 16px;
+    stroke-dashoffset: 16px;
+    transition: all 0.3s ease;
+    transition-delay: 0.1s;
+    transform: translate3d(0, 0, 0);
+  }
+  .cbx span:last-child {
+    padding-left: 8px;
+    line-height: 18px;
+  }
+  .cbx:hover span:first-child {
+    border-color: #00C853;
+  }
+  .inp-cbx {
+    position: absolute;
+    visibility: hidden;
+  }
+  .inp-cbx:checked + .cbx span:first-child {
+    background: #00C853;
+    border-color: #00C853;
+    animation: wave 0.4s ease;
+  }
+  .inp-cbx:checked + .cbx span:first-child svg {
+    stroke-dashoffset: 0;
+  }
+
+  .inline-svg {
+    position: absolute;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+    user-select: none;
+  }
+  @-moz-keyframes wave {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  @-webkit-keyframes wave {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  @-o-keyframes wave {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  @keyframes wave {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  
